IngressRequestRateLimitExceeded errors should include NoWritesPerformed error label

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0, 8.0.20, 8.2.6
    • Affects Version/s: None
    • Component/s: None
    • None
    • Workload Resilience
    • Fully Compatible
    • ALL
    • v8.2, v8.0
    • Workload Resilience 2025-12-22, Workload Resilience 2026-01-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Overload errors from the ingress request rate limiter should include the NoWritesPerformed error label. NoWritesPerformed was originally added in DRIVERS-2327. With client backpressure there's a similar scenario where NoWritesPerformed is needed:

      • Client sends a retryable write
      • Client sees a RetryableWriteError (either from the server or a network error) and runs a retry attempt.
      • All retry attempts fail with IngressRequestRateLimitExceeded but without NoWritesPerformed.
      • Client fails with IngressRequestRateLimitExceeded which implies the write was definitely not applied which is incorrect.

      When the server attaches NoWritesPerformed, the client will correctly reraise the first RetryableWriteError which indicates that the result is not known.

            Assignee:
            Patrick Freed
            Reporter:
            Shane Harvey (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: