SERVER-113311 Attach NoWritesPerformed error label to IngressRequestRateLimiter rejections (#45590)

GitOrigin-RevId: 24327b03007fdb75c2f89bcea1536888d5606fc8