jstests/noPassthrough/overload_retryability/run_command_overload_retryability.js
@@ -40,7 +40,7 @@ function enableFailCommand(conn, command, times) {
                 errorCode: ErrorCodes.IngressRequestRateLimitExceeded,
                 failCommands: commands,
                 failInternalCommands: true,
-                errorLabels: ["SystemOverloadedError", "RetryableError"],
+                errorLabels: ["SystemOverloadedError", "RetryableError", "NoWritesPerformed"],
             },
         }),
     );
